trying to fix an error

--- a/my_app/templates/new_search.html
+++ b/my_app/templates/new_search.html
@@ -19,7 +19,7 @@
                     {% if post.3 == None %}
                         <a href="/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/1200px-No_image_available.svg.png" alt="Image" style="width: 210px;"></a>
                     {% else %}
-                        <a href="/"><img src="{{post.3}}" alt="Image"></a>
+                        <a href="/"><img src="{{post.3}}" alt="Image" class="detail-img"></a>
                     {% endif %}
                 </div>
 
