--- a/my_app/templates/new_search.html
+++ b/my_app/templates/new_search.html
@@ -5,7 +5,7 @@
 
 
 <h3 style="text-align: center;">{{search | title}}</h3>
-
+<h6 class="x">test</h6>
 <div class="row">
     
 
@@ -24,6 +24,7 @@
                 </div>
 
                 <div class="card-content">
+                    <br>
                     <p>{{post.0}}</p>
                 </div>
 
